--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
@@ -38,5 +39,8 @@
     "eslint-plugin-react": "^7.28.0",
     "ndb": "^1.1.5",
     "prettier": "^2.5.1"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
